k8s/service-gcp/04-service-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  labels:
    app: node-app
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - port: 80             # External port exposed via Load Balancer
      targetPort: 3000     # Container port your app listens on
